Implementação de mapper para as classes de domínio e adição de pesquisa para veículo e manutenção.
